Upadte Package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nikita-auth",
+  "name": "Basic-authentication",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
-  "author": "",
+  "author": "Vishal Sharma",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
