--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "node-forge": "^1.3.1",
     "node-jsencrypt": "^1.0.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
